examples/failing/events.cz
let e = event_emitter();
e.subscribe("foo", fn (x) { print("foo", x); });
e.emit("foo", "bar");
